Login Module Added

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
             <div class="footer-content">
               <div class="footer-head">
                 <div class="footer-logo">
-                  <h2><span><img src="../../assets/logonya.png"/></span>Rentowisko</h2>
+                  <img src="../../assets/logonya.png"/>
                 </div>
 
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis.</p>
