--- a/src/app/car/car-add/car-add.component.html
+++ b/src/app/car/car-add/car-add.component.html
@@ -4,15 +4,25 @@
             <div class="card">
                 <img src="https://thumbs.dreamstime.com/z/modern-car-rental-logo-template-racing-silhouette-simple-line-vector-illustration-255575119.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Vroom Rent</h5>
-                  <p class="card-text underline">company@vroom.com</p>
-                  <nav class="nav flex-column">
-                    <a class="nav-link active" aria-current="page" href="#">👥 Company Profile</a>
-                    <a class="nav-link" href="#">➕ Add A New Vehicle</a>
-                    <a class="nav-link" href="#">🦼 Manage Vehicles</a>
-                    <a class="nav-link" aria-disabled="true">📤 Logout</a>
-                  </nav>
-                </div>
+                    <h5 class="card-title">Michael Smith</h5>
+                    <p class="card-text underline">michaelsmith@domain.com</p>
+                    <hr/>
+                    <nav class="nav flex-column">
+                      <a class="nav-link" aria-current="page" href="/profile">
+                          <img src="../../assets/icons/person.png"/> Company Profile
+                      </a>
+                      <a class="nav-link active" href="#">
+                          <img src="../../assets/icons/list.png"/> Add A New Vehicle
+                      </a>
+                      <a class="nav-link" href="#">
+                          <img src="../../assets/icons/vehicle.png"/> Manage Vehicles
+                      </a>
+                      <hr/>
+                      <a class="nav-link" aria-disabled="true" href="/">
+                          <img src="../../assets/icons/logout.png"/> Logout
+                      </a>
+                    </nav>
+                  </div>
               </div>
         </div>
         <div class="col-md-9">
