--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -22,11 +22,8 @@
           <a class="nav-link" aria-disabled="true">About us</a>
         </li>
       </ul>
-      </div>
-
-      <form class="d-flex" role="search" action="/car-add">
-        <button class="btn btn-primary" style="background-color:#170b3b;;" type="submit">Rent your car</button>
-      </form>
+      </div>      
+      <a href="/car-add" class="btn btn-primary" style="background-color:#170b3b;;">Rent your car</a>
     </div>
   </div>
 </nav>
