profile module added

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -52,3 +52,24 @@ button.btn-primary, a.active{
 button:hover{
     opacity: 0.8;
 }
+
+.image-preview img{
+    width: 100px;
+    height: 100px;
+    margin: 1% 0;
+}
+
+.fileUpload{
+    display: inline-block;
+    background-color: gray;
+    color: white;
+    padding: 0.5rem;
+    font-family: sans-serif;
+    border-radius: 0.3rem;
+    cursor: pointer;
+    margin-top: 1rem;
+    width: 150px;
+  }
+  .fileUpload img{
+    margin-right: 5%;
+  }
