--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -5,3 +5,11 @@ footer{
     padding: 40px 0;
     background: #f9f9f9;
 }
+.footer-area-bottom {
+    background-color: #002D62;
+    color: white;
+}
+.footer-area-bottom p{
+    text-align: left;
+    margin-top: 1rem;
+}
