--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -9,7 +9,7 @@
       <div class="p-2">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll " style="--bs-scroll-height: 100px;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Search a car</a>
+          <a class="nav-link active" aria-current="page" href="/car-search">Search a car</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Search by maps</a>
