--- a/src/app/car/car-search-map/car-search-map.component.html
+++ b/src/app/car/car-search-map/car-search-map.component.html
@@ -102,6 +102,13 @@
         </div>
     </div>
     <hr/>
+    
+    <div class="row map">
+        <div class="col-md-12">
+            <app-map></app-map>
+        </div>
+    </div>
+    
 
     <div class="row cars-list">
         <div class="col-md-4" *ngFor="let car of cars">
@@ -118,3 +125,4 @@
     </div>
 
 </div>
+
