--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -12,7 +12,7 @@
           <a class="nav-link active" aria-current="page" href="/car-search">Search a car</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Search by maps</a>
+          <a class="nav-link" href="/car-search-map">Search by maps</a>
         </li>
       
         <li class="nav-item">
